--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,9 @@
 name: Node.js CI
 
 on:
+  # Triggers the workflow on push requests for any branch
   push
-    #branches: [ "master" ]
-  #pull_request:
-    #branches: [ "master" ]
+   
 
 jobs:
   build:
@@ -27,5 +26,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    #- run: npm run build
     - run: npm test
