--- a/app.json
+++ b/app.json
@@ -13,15 +13,13 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.group21.strive"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.group21.strive"
+      }
     },
     "web": {
       "bundler": "metro",
@@ -33,11 +31,6 @@
     ],
     "experiments": {
       "typedRoutes": true
-    },
-    "extra": {
-      "eas": {
-        "projectId": "7bae33fc-5658-46fb-bc1d-5937864dc6b9"
-      }
     }
   }
 }
