--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.3.2"
