--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,12 @@ name: Node.js CI
 
 on:
   # Triggers the workflow on push requests for any branch
-  push
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - master
    
 
 jobs:
