--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,12 +5,7 @@ name: Node.js CI
 
 on:
   # Triggers the workflow on push requests for any branch
-  push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - master
+  push
    
 
 jobs:
