--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@testing-library/react-native": "^12.7.2",
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -45,7 +46,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
