--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+          java-version: '17'
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v1
       env:
