--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -8,24 +8,34 @@ jobs:
 
     runs-on: ubuntu-22.04
 
-    strategy:
-      matrix:
-        node-version: [22.x]
+    steps:
+      - uses: actions/checkout@v4
 
-    steps :
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'  
+          cache: 'npm'
+
       - run: npm ci
-     
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          distribution: 'temurin'  
+          java-version: '11'
+
       - name: Install Android SDK
         run: sudo apt-get install -y android-sdk
 
       - name: Grant Gradle permission
         run: chmod +x android/gradlew
-        
+
       - name: Build APK
         run: cd android && ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3 
         with:
           name: app-debug.apk
           path: android/app/build/outputs/apk/debug/app-debug.apk
