--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -19,20 +19,17 @@ jobs:
 
       - run: npm ci
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          distribution: 'temurin'  
-          java-version: '11'
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
 
-      - name: Install Android SDK
-        run: sudo apt-get install -y android-sdk
+      - name: Expo login
+        run: eas login --token ${{ secrets.EXPO_TOKEN }}
 
-      - name: Build APK
-        run: cd android && ./gradlew assembleDebug
+      - name: EAS Build APK
+        run: eas build --platform android --non-interactive
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v3 
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v3
         with:
           name: app-debug.apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          path: ./builds/android/*.apk
