--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Install EAS CLI
         run: npm install -g eas-cli
 
-      - name: Expo login
-        run: eas login --token ${{ secrets.EXPO_TOKEN }}
-
-      - name: EAS Build APK
+      - name: Build APK with EAS
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}  
         run: eas build --platform android --non-interactive
-
+    
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
