--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,11 +6,9 @@ name: Node.js CI
 on:
   # Triggers the workflow on push requests for any branch
   push
-   
 
 jobs:
   build:
-
     runs-on: ubuntu-22.04
 
     strategy:
@@ -19,11 +17,11 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm test
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm test
