--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^10.14.1",
     "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
+    "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
