fix : Update AndroidManifest.xml
fix : Update AndroidManifest.xml to ensure better quality check from SonarCloud

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
 
     <application
         android:label="MyApp"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="false"
+        android:debuggable="false">
 
         <!-- MainActivity with android:exported set to true -->
         <activity
