--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of a working and stable APK.
 
 name: "Build APK"
-run-name: ${{ github.actor }} is learning build Android App using Github Actions
+run-name: Building APK...
 on: 
   push
   
