--- a/app.json
+++ b/app.json
@@ -13,10 +13,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "bundleIdentifier": "com.strive.myapp"
       "supportsTablet": true
     },
    "android": {
-      "package": "com.strive.myapp",  // Add this with your app's actual package name
+      "package": "com.strive.myapp", 
       "adaptiveIcon": {
          "foregroundImage": "./assets/images/adaptive-icon.png",
          "backgroundColor": "#ffffff"
