--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "bundleIdentifier": "com.strive.myapp"
+      "bundleIdentifier": "com.strive.myapp",
       "supportsTablet": true
     },
    "android": {
