--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -30,6 +30,9 @@ jobs:
         with: 
           node-version: '22.x'
 
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
+        
       - name: Run Yarn Install
         run: | 
               npm install -g yarn
@@ -39,7 +42,7 @@ jobs:
         run: |
             npm install -g expo-cli
             expo prebuild  # Ensures native code is generated for Expo
-            expo build:android  # Builds the APK
+            eas build --platform android # Builds the APK
 
 
       - name: Upload APK to Artifacts
