--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Install EAS CLI
         run: npm install -g eas-cli
+      
+      - name: Expo Login
+        run: eas login --token ${{ secrets.EXPO_TOKEN }
         
       - name: Run Yarn Install
         run: | 
