--- a/package.json
+++ b/package.json
@@ -18,64 +18,21 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.0.2",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "expo": "~51.0.28",
-    "expo-auth-session": "~5.5.2",
-||||||| parent of 26c7039 (build(infra): Docker now works regardless of IP)
-    "expo": "~51.0.28",
-=======
-||||||| parent of aba98c0 (feat(tests): updated test dependencies)
-=======
-||||||| parent of c897f9b (fix(firebase): updated dependecies)
-=======
-<<<<<<< HEAD
->>>>>>> c897f9b (fix(firebase): updated dependecies)
     "@testing-library/react-native": "^12.7.2",
->>>>>>> aba98c0 (feat(tests): updated test dependencies)
     "expo": "~51.0.38",
-<<<<<<< HEAD
->>>>>>> 26c7039 (build(infra): Docker now works regardless of IP)
-||||||| parent of e039983 (feat(firebase): created signUp screen)
-=======
     "expo-auth-session": "^5.5.2",
-<<<<<<< HEAD
->>>>>>> e039983 (feat(firebase): created signUp screen)
-||||||| parent of c897f9b (fix(firebase): updated dependecies)
-=======
-||||||| parent of 547f67a (fix(firebase): updated dependecies)
-    "expo": "~51.0.28",
-    "expo-auth-session": "^5.5.2",
-=======
-    "expo": "~51.0.28",
-    "expo-auth-session": "~5.5.2",
->>>>>>> 547f67a (fix(firebase): updated dependecies)
->>>>>>> c897f9b (fix(firebase): updated dependecies)
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-random": "~14.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "firebase": "^10.14.1",
     "js-cookie": "^3.0.5",
-||||||| parent of 758d087 (feat(firebase): added core files & dep)
-=======
-    "firebase": "^10.14.0",
->>>>>>> 758d087 (feat(firebase): added core files & dep)
-||||||| parent of b621b31 (fix(api): Firebase db setup, unfinished GoogleAuth)
-    "firebase": "^10.14.0",
-=======
-    "firebase": "^10.14.1",
-    "js-cookie": "^3.0.5",
->>>>>>> b621b31 (fix(api): Firebase db setup, unfinished GoogleAuth)
     "nativewind": "^2.0.11",
     "prettier": "^3.3.3",
     "react": "18.2.0",
@@ -88,23 +45,10 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.3.2"
-||||||| parent of c897f9b (fix(firebase): updated dependecies)
-    "tailwindcss": "^3.3.2"
-=======
     "tailwindcss": "^3.3.2",
-    "expo-crypto": "~13.0.2"
->>>>>>> c897f9b (fix(firebase): updated dependecies)
-||||||| parent of b621b31 (fix(api): Firebase db setup, unfinished GoogleAuth)
-    "tailwindcss": "^3.3.2",
-    "expo-crypto": "~13.0.2"
-=======
-    "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.3.2"
->>>>>>> b621b31 (fix(api): Firebase db setup, unfinished GoogleAuth)
+    "expo-crypto": "~13.0.2",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
