--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~51.0.38",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -32,6 +33,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
     "prettier": "^3.3.3",
@@ -46,9 +48,7 @@
     "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.3.2",
-    "expo-crypto": "~13.0.2",
-    "react-router-dom": "^6.27.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
