--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.tsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(expo-router)/)"
+    ]
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
