--- a/package.json
+++ b/package.json
@@ -8,29 +8,32 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest ./__tests__/",
     "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo",
+    "rootDir": ".",
     "transform": {
-      "^.+\\.tsx?$": "babel-jest"
+      "^.+\\.js$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(expo-router)/)"
+      "node_modules/(?!((jest-)?react-native|react-clone-referenced-element|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|sentry-expo|native-base))"
     ]
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.2.0",
+    "@react-native-firebase/firestore": "^21.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.0.2",
-    "@testing-library/react-native": "^12.7.2",
     "expo": "~51.0.38",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -58,14 +61,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/react-native": "^12.8.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
+    "firebase-mock": "^2.3.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
   "private": true
