--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of a working and stable APK.
 
 name: "Build APK"
-run-name: Building APK...
+run-name: ${{ github.actor }} is learning build Android App using Github Actions
 on: 
   push
   
@@ -15,7 +15,7 @@ jobs:
       - name: Install Java 
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '20'
           distribution: "adopt"
           cache: "gradle"
 
