--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: '22.x'  # Replace with your project's Node.js version
 
       - name: Install dependencies
+        run: npm i
         run: npm ci
 
       - name: Run tests with coverage
