--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/cli": "^15.0.1",
+    "@react-native/js-polyfills": "^0.76.1",
+    "@react-native/metro-babel-transformer": "^0.76.1",
+    "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^6.0.2",
     "@testing-library/react-native": "^12.7.2",
     "expo": "~51.0.38",
@@ -28,6 +32,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "metro-runtime": "^0.81.0",
     "nativewind": "^2.0.11",
     "prettier": "^3.3.3",
     "react": "18.2.0",
@@ -37,7 +42,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.3.2"
   },
@@ -49,6 +54,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "metro-config": "^0.81.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
