--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -3,9 +3,7 @@
 name: "Build APK"
 run-name: ${{ github.actor }} is learning build Android App using Github Actions
 on: 
-  eas-build-android:
-  push:
-  
+  push
   
 jobs:
   build:
@@ -20,6 +18,6 @@ jobs:
 
       - name : Expo build into Android
         run: |
-              eas-build-android:production
+              eas build --platform android
 
 
