fix: expo plugin use

--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -9,15 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: 🏗 Setup repo
+        uses: actions/checkout@v3
 
-      - name: Run NPM Install
-        run: | 
-              npm install
+      - name: 🏗 Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: yarn
 
-      - name : Expo build into Android
-        run: |
-              eas build --platform android
+      - name: 🏗 Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
 
+      - name: 📦 Install dependencies
+        run: npm install
 
+      - name: 🚀 Build app
+        run: eas build --non-interactive
