--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -25,8 +25,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: npm install yarn
-        run: yarn install
+        run: npm install yarn && yarn install
 
       - name: 🚀 Build app
         run: eas build --non-interactive
