fix project linked to me

--- a/app.json
+++ b/app.json
@@ -37,6 +37,7 @@
       "eas": {
         "projectId": "cd0ac762-fdab-4f82-a803-68cf91cc1f22"
       }
-    }
+    },
+    "owner": "eduardoneville82"
   }
 }
