--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -2,7 +2,7 @@
 
 name: "Build APK"
 
-run-name: ${{ github.actor }} is learning build Android App using Github Actions
+run-name: Building an APK
 on: 
   push
   
@@ -29,4 +29,4 @@ jobs:
         run: yarn install
 
       - name: 🚀 Build app
-        run: eas build --non-interactive --platform android
+        run: eas build --platform android
