--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -29,4 +29,4 @@ jobs:
         run: yarn install
 
       - name: 🚀 Build app
-        run: eas build --platform android
+        run: eas build --non-interactive
