--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@react-native-firebase/firestore": "^21.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.0.2",
-    "@testing-library/react-native": "^12.7.2",
     "expo": "~51.0.38",
     "expo-auth-session": "^5.5.2",
     "expo-camera": "^15.0.16",
@@ -41,7 +40,7 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -55,21 +54,18 @@
     "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@jest/globals": "^29.7.0",
-    "@testing-library/react-native": "^12.8.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "@types/react-test-renderer": "^18.0.7",
     "firebase-mock": "^2.3.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
