--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/cli": "^15.0.1",
-    "@react-native/js-polyfills": "^0.76.1",
-    "@react-native/metro-babel-transformer": "^0.76.1",
-    "@react-native/metro-config": "^0.76.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/cli": "^15.0.1",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/firestore": "^21.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native/js-polyfills": "^0.76.1",
+    "@react-native/metro-babel-transformer": "^0.76.1",
+    "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.38",
     "expo-auth-session": "^5.5.2",
@@ -41,10 +41,10 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "metro-runtime": "^0.81.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
+    "metro-runtime": "^0.81.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
     "react": "18.2.0",
@@ -59,7 +59,7 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
