--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli": "^15.0.1",
-    "@react-native-firebase/app": "^21.2.0",
-    "@react-native-firebase/firestore": "^21.2.0",
-    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
+    "@react-native-google-signin/google-signin": "^8.2.2",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.38",
-    "expo-auth-session": "^5.5.2",
-    "expo-camera": "^15.0.16",
+    "expo": "^51.0.38",
+    "expo-auth-session": "~5.5.2",
+    "expo-build-properties": "~0.12.5",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.28",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
+    "expo-dev-client": "~4.0.29",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-permissions": "^14.4.0",
+    "expo-permissions": "~14.2.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -67,10 +68,10 @@
     "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "firebase-mock": "^2.3.2",
+    "firebase-mock": "^2.2.4",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
-    "metro-config": "^0.81.0",
+    "jest-expo": "~51.0.4",
+    "metro-config": "^0.80.8",
     "react-native-dotenv": "^3.4.11",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
