--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,15 @@ allprojects {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm'
+}
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+kotlin {
+    jvmToolchain(8)
+}
