--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 18 03:01:04 CEST 2024
-sdk.dir=/home/mark/Android/Sdk
+#Thu Nov 07 22:10:52 CET 2024
+sdk.dir=C\:\\Users\\marcj\\AppData\\Local\\Android\\Sdk
