--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@jest/globals": "^29.7.0",
+    "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
