--- a/app.json
+++ b/app.json
@@ -17,12 +17,12 @@
       "supportsTablet": true
     },
     "android": {
-      "googleServiceFile": "./google-services.json",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.eduardoneville82.strive"
+      "package": "com.strive"
     },
     "web": {
       "bundler": "metro",
@@ -31,7 +31,8 @@
     },
     "plugins": [
       "@react-native-firebase/app",
-      "expo-router"
+      "expo-router",
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true
@@ -41,6 +42,6 @@
         "projectId": "cd0ac762-fdab-4f82-a803-68cf91cc1f22"
       }
     },
-    "owner": "eduardoneville82"
+    "owner": "strive_epfl"
   }
 }
