--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/cli": "^15.0.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
-    "@react-native-google-signin/google-signin": "^8.2.2",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
@@ -36,13 +36,12 @@
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-permissions": "~14.2.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.14.1",
+    "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
     "metro-runtime": "^0.81.0",
@@ -51,6 +50,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
