--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,7 @@
     },
     "preview2": {
       "android": {
+        "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
       }
     },
