fix(workflows): duplication of install

--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -28,6 +28,8 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
+      - name: 📦 Install dependencies
+        run: yarn install
 
       - name: 🚀 Build app
         run: eas build --non-interactive --platform android
