--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
     "lint": "expo lint"
@@ -32,8 +32,8 @@
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-file-system": "^17.0.1",
     "expo-dev-client": "~4.0.29",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
@@ -61,8 +61,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "yarn": "^1.22.22",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
