--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -3,16 +3,16 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     name: Install and build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 22.x
           cache: npm
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
