--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,11 +13,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: "Use Node.js ${{ matrix.node-version }}"
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+
       - name: "Format code"
-          run: npx prettier --write ./app
+        run: npx prettier --write ./app
 
       - name: "Install dependencies"
-          run: npm ci
+        run: npm ci
 
       - name: "Run tests with coverage"
-          run: yarn test --coverage
+        run: yarn test --coverage
