--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: npx prettier --write ./app
 
       - name: "Install dependencies"
-        run: npm ci
+        run: npm i
 
       - name: "Run tests with coverage"
         run: yarn test --coverage
