--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^6.0.2",
+    "@testing-library/react-native": "^12.8.1",
     "expo": "^51.0.38",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-file-system": "^17.0.1",
     "expo-dev-client": "~4.0.29",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
@@ -61,8 +62,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
-    "yarn": "^1.22.22",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -75,6 +76,7 @@
     "jest-expo": "~51.0.4",
     "metro-config": "^0.80.8",
     "react-native-dotenv": "^3.4.11",
+    "react-test-renderer": "~18.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
