--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,3 +27,8 @@ jobs:
 
       - name: "Run tests with coverage"
         run: yarn test --coverage --debug
+
+      - name: "SonarCloud report"
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
