--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
         run: npx prettier --write ./app
 
       - name: "Install dependencies"
-        run: npm i --ddd && yarn --verbose
+        run: npm i --d && yarn --verbose
 
       - name: "Run tests with coverage"
         run: yarn test --coverage --debug
