fix: moved SonarCloud to another job

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,7 @@ on: push
 
 jobs:
   build:
+    name: "Tests"
     runs-on: ubuntu-22.04
 
     strategy:
@@ -28,7 +29,14 @@ jobs:
       - name: "Run tests with coverage"
         run: yarn test --coverage --debug
 
-      - name: "SonarCloud report"
-        uses: sonarsource/sonarcloud-github-action@master
+  sonarcloud:
+    name: "SonarCloud report"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
