--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.organization=swent-group21
-sonar.projectKey=strive
+sonar.projectKey=swent-group21_strive
 sonar.host.url=https://sonarcloud.io
