fix: removed yarn.lock

--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -3,9 +3,8 @@
 name: "Build APK"
 
 run-name: Building an APK
-on: 
-  push
-  
+on: push
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -17,7 +16,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22.x
-          cache: yarn
 
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
