--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -27,4 +27,4 @@ jobs:
         run: yarn install
 
       - name: 🚀 Build app
-        run: eas build --non-interactive --platform android
+        run: eas build --non-interactive --platform android --local
