fix(apk): uses correct Java version

--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -26,5 +26,11 @@ jobs:
       - name: 📦 Install dependencies
         run: yarn install
 
+      - name: 📦 Install JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "17"
+
       - name: 🚀 Build app
         run: eas build --non-interactive --platform android --local
