--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 📦 Install dependencies
         run: yarn install
 
-      - name: 📦 Install JDK 17
+      - name: ☕ Install JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: "temurin"
@@ -34,3 +34,8 @@ jobs:
 
       - name: 🚀 Build app
         run: eas build --non-interactive --platform android --local
+
+      - name: 📤 Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          path: /home/runner/work/strive/strive/*.apk
