--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^6.0.2",
     "@testing-library/react-native": "^12.8.1",
+    "cuid": "^3.0.0",
     "expo": "^51.0.38",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
@@ -63,6 +64,7 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14",
+    "uuid": "^11.0.3",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
