--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@react-native-community/cli": "^15.0.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
-    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/stack": "^7.0.2",
     "@testing-library/react-native": "^12.8.1",
     "expo": "^51.0.38",
     "expo-auth-session": "~5.5.2",
@@ -52,13 +52,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^4.0.0",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
