--- a/app.json
+++ b/app.json
@@ -31,8 +31,7 @@
     },
     "plugins": [
       "@react-native-firebase/app",
-      "expo-router",
-      "@react-native-google-signin/google-signin"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
