--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-file-system": "~18.0.2",
     "expo-image-picker": "~16.0.1",
     "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
