test(full): Tests for all app + configs

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "lint": "expo lint",
+    "format": "npx prettier --check --write ."
   },
   "doctor": {
     "reactNativeDirectoryCheck": {
@@ -28,13 +26,13 @@
     "@react-native-community/cli": "^15.0.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
+    "@react-native/babel-preset": "^0.76.3",
     "@react-native/js-polyfills": "^0.76.1",
     "@react-native/metro-babel-transformer": "^0.76.1",
     "@react-native/metro-config": "^0.76.1",
     "@react-navigation/native": "^7.0.2",
-    "@react-navigation/stack": "^7.0.2",
-    "react-native-css-interop": "^0.1.18",
-    "react-native-safe-area-context": "4.12.0",
+    "@react-navigation/native-stack": "^7.1.1",
+    "@react-navigation/stack": "^7.0.6",
     "expo": "^52.0.6",
     "expo-auth-session": "~6.0.0",
     "expo-build-properties": "~0.13.1",
@@ -50,16 +48,16 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
-    "@testing-library/react-native": "^12.8.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
     "js-cookie": "^3.0.5",
     "metro-runtime": "^0.81.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
+    "react": "^18.2.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -74,16 +72,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@jest/globals": "^29.7.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.4",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
+    "babel-jest": "^29.7.0",
     "firebase-mock": "^2.2.4",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.1",
     "metro-config": "^0.80.8",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "~18.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
