fix: added API key to app.json

--- a/app.json
+++ b/app.json
@@ -23,7 +23,12 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.strive"
+      "package": "com.strive",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"
+        }
+      }
     },
     "web": {
       "bundler": "metro",
