test: add of test for welcome screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {"paths": {
+    "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+  }},
   "extends": "expo/tsconfig.base",
   "include": [
     "**/*.ts",
@@ -7,4 +9,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
+
 }
